fix alignment for display to show it in the middle of display

--- a/css/binaryCalculator.css
+++ b/css/binaryCalculator.css
@@ -22,11 +22,13 @@ body {
   border: solid;
   min-height: 75pt;
   color: #222222;
+  padding: 2%;
   text-align: center;
   vertical-align: middle;
   line-height: 75pt;
   font-family: 'Kalam', cursive;
   font-size: 30pt;
+  word-wrap: break-word;
 }
 
 .binaryNumbers, .btns {
